--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -26,14 +26,45 @@ header{
 	}
 }
 
-div.create_ques{
-	left : 10%;
-	width:80%;
-	dislpay:flex;
-	align-items: center;
-	flex-direction: column;
+
+main{
+	display : flex;
+	width:100%;
+	height:100%;
+	background-color: aqua;
+	justify-content: space-between;
+	
+	.leftblock{
+		width: 20%;
+		background-color: red;
+	
+	}
+
+	.centreblock{
+		width: 60%;
+		background-color: blue;
+	}
+
+	.rightblock{
+		width: 20%;
+		background-color: green;
+	}
 
 }
+
+
+footer{
+	height: 50px;
+	width : 100%;
+	position : fixed;
+	bottom:0px;
+	background-color: red;
+
+}
+
+
+
+
 
 
 #totop{
