fixed flexbox bug

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
 </header>
 <br>
 
-<main>
+<div class="main">
 	
 	<div class="leftblock"> left</div>	
 	<div class="centreblock">
@@ -47,7 +47,7 @@
 	</div>
 	<div class="rightblock"> right</div>
 
-</main>
+</div>
 
 
 <br>
