--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -27,10 +27,9 @@ header{
 }
 
 
-main{
+.main{
 	display : flex;
 	width:100%;
-	height:100%;
 	background-color: aqua;
 	justify-content: space-between;
 	
