after basic styling

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -52,9 +52,16 @@ header{
 			
 		}
 		.ques{
-			background-color: aqua;
+			border-top-style: ridge;
+			
+			.modalff{
+				a{
+					height:25px;
+				}
+			}
 			
 		}
+		
 
 	}
 
