--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 	</ul>
 	<nav>
 	  <div class="nav-wrapper">
-	    <a href="#!" class="brand-logo"><img src="/home/Downloads/14753307_1794120780859714_5844849096759401855_o.jpg" alt="logo"></a>
+	    <a href="#!" class="brand-logo">askbefikar</a>
 	    <ul class="right hide-on-med-and-down">
 	      <li><%= link_to "Users", '/' %></li>
 	      <li><%= link_to "Profile", '/profile' %></li>
@@ -39,10 +39,10 @@
 			<% end %>
 
 		</div>
-
+			
+<%  @questions.each do |q|  %>		
 		<div class="ques">
-			<%  @questions.each do |q|  %>
-
+					
 					<!-- <ul class="email"> -->
 					<ul style="font-weight: bold;"">
 					<%= q.user.email%>
@@ -51,28 +51,32 @@
 					<%= q.content %>
 					<br>
 
-								 <!-- Modal Trigger -->
-			  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+			<div class="modalff">						 <!-- Modal Trigger -->
+				  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Answers</a>
 
-			  <!-- Modal Structure -->
-			  <div id="modal1" class="modal modal-fixed-footer">
-			    <div class="modal-content">
-			      <h4>Modal Header</h4>
-			      <p>A bunch of text</p>
-			    </div>
-			    <div class="modal-footer">
-			      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
-			    </div>
-			  </div>
+				  <!-- Modal Structure -->
+				  <div id="modal1" class="modal modal-fixed-footer">
+				    <div class="modal-content">
+				      <h4>Modal Header</h4>
+				      <p>A bunch of text</p>
+				    </div>
+				    <div class="modal-footer">
+				      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
+				    </div>
+				  </div>
+			</div>
 
 
 
 					<% q.answers.each do |a| %>
 						<li><%= a.answer %></li>
 					<% end %>
-			<% end %>
+			
 
 		</div>	
+<% end %>
+
+           
 
 	</div>
 	<div class="rightblock"> </div>
@@ -85,8 +89,14 @@
 
    
 <footer> 
-	<a id="totop" href="#linksHeading">Go to top of the page</a>
+	 
 
+	 <a id="totop" href="#linksHeading">Go to top of the page</a>
+ 
 	
+
+
+
  
 </footer>
+
