--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -44,16 +44,21 @@
 		<div class="ques">
 					
 					<!-- <ul class="email"> -->
-					<ul style="font-weight: bold;"">
+					<ul style="font-weight: bold;">
 					<%= q.user.email%>
 					</ul>
 
 					<%= q.content %>
 					<br>
-
-			<div class="modalff">						 <!-- Modal Trigger -->
+			<!-- Modal Trigger -->
+			<div class="modalff">						 
 				  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Answers</a>
-
+				  
+				  <% str="/toggle_question_upvote/#{q.id}" %>
+				  <% html_id_for_ques = "question_#{q.id}" %>
+				  <% upvote_status = is_question_upvoted(q.id) ? "Downvote" : "Upvote" %>
+				  <%= link_to upvote_status,str,method: :post,:id=>html_id_for_ques,:remote=>true %>
+				  
 				  <!-- Modal Structure -->
 				  <div id="modal1" class="modal modal-fixed-footer">
 				    <div class="modal-content">
