--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
 	    <a href="#!" class="brand-logo">askbefikar</a>
 	    <ul class="right hide-on-med-and-down">
 	      <li><%= link_to "Users", '/' %></li>
-	      <li><%= link_to "Profile", '/profile' %></li>
+	      <li><%= link_to "Profile", edit_user_registration_path %></li>
 	      <li><%= link_to "Sign Out",destroy_user_session_path,method: :delete %></li>
 	      <!-- Dropdown Trigger -->
 	      <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
