--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,8 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container">
 
+<h3>Edit <%= resource_name.to_s.humanize %></h3>
+
+<br>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
@@ -11,6 +14,7 @@
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
+<br>
 
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
@@ -38,6 +42,31 @@
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
+<p> <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<br>
 <%= link_to "Back", :back %>
+
+</div>
+
+
+<style type="text/css">
+ 
+
+  .container{
+    padding: 0px;
+    margin: 0px;
+    border: 100px solid green;
+    width: 100%;
+    background-color: #f0fff0;
+    padding-left: 20px;
+  }
+    
+  h3{
+    margin: 30px 0 0 0;
+    font-size: 28px;
+    color: #66847C;
+    text-shadow: 0 2px 5px rgba(0,0,0,.15);
+  }
+
+
+</style>
