--- a/app/views/home/answer.js.erb
+++ b/app/views/home/answer.js.erb
@@ -2,6 +2,6 @@ console.log("answer created");
 <% str= "#answer_modal_#{@question.id} .modal-content ul"%>
 $("<%= str %>").append("<%= escape_javascript(render 'answer',:a => @ans) %>");
 
-$('<%= str %>').on('hidden.bs.modal', function() {
-  return false;
-});
+// $('<%= str %>').on('hidden.bs.modal', function() {
+//   return false;
+// });
