--- a/app/views/home/all_users.html.erb
+++ b/app/views/home/all_users.html.erb
@@ -1,5 +1,35 @@
+
+<h3>All connected Users</h3>
+
 <ul>
 <% @users.each do |u| %>
-	<li><%=u.email%></li>
+	<li class="one"> ~ <%=u.email%></li>
+	<br>
 <% end %>
 </ul>
+
+
+<footer>
+	<a href="/">Back</a>
+</footer>
+
+
+<style type="text/css">
+	
+	*{
+		background-color: #dc143c;
+		font-size: 40px;
+	}
+
+
+	.one{
+		padding-left: 20px;
+
+		font-size: 27px; 
+		background-color: #f0ffff;
+	}
+
+	
+
+
+</style>
