--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -44,11 +44,15 @@
 		<div class="ques">
 					
 					<!-- <ul class="email"> -->
-					<ul style="font-weight: bold;">
-					<%= q.user.email%>
+					<ul style="font-weight: bold;font-size: 20px;">
+					<%= q.user.email%>  
+
+					<ul style="font-size: 12px;"> <%= q.created_at %> </ul>
+					
 					</ul>
 
 					<%= q.content %>
+
 					<br>
 			<!-- Modal Trigger -->
 			<div class="modalff">
@@ -72,24 +76,28 @@
 				  
 				  <!-- Modal Structure -->
 				  <div id=<%= str %> class="modal modal-fixed-footer">
-				    <div class="modal-content">
-				      <h4>Answers</h4>
+
+				  		<h4>Answers</h4>
 				      <%= form_tag url_for(controller: 'home',action: 'answer',method: :post,:id=>q.id),:class=>"answer_form",:id=>"ans_form_#{q.id}",remote: true do%>
 				      		<%= text_area_tag :content%>
 				      		<%= submit_tag :Submit,:class=>"modal-action modal-close waves-effect waves-green btn-flat " %>
 				      		
 				      <% end %>	
 
-				      
+				    <div class="modal-content">
+				          
 				      
 				      <ul>
-
+				      	
 				      	<% q.answers.each do |a| %>
 								<div id="ans">
-									<%= a.user.email%>
+									<ul >
+										<%= a.user.email%>
+									</ul>
 									<%= render 'answer',:a => a %>
-									<br>
+									
 								</div>
+
 
 						<% end %>
 				      </ul>	
