--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -16,6 +16,8 @@ header{
 	align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid grey;
+    position : fixed;
+	top: 0px;
 
     img{
     	height: 50px;
@@ -35,7 +37,7 @@ header{
 .main{
 	display : flex;
 	width:100%;
-	
+	margin-top: 50px;
 	justify-content: space-between;
 	
 	.leftblock{
