--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -94,6 +94,7 @@
 									<ul >
 										<%= a.user.email%>
 									</ul>
+									<ul style="font-size: 12px;"> <%= a.created_at %> </ul>
 									<%= render 'answer',:a => a %>
 									
 								</div>
