--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -71,6 +71,10 @@
 					  <span id="question_count_<%= q.id %>">
 					  	<%= q.upvotes.count %>
 					  </span>
+					  <span>
+					  	<% str = "/question/#{q.id}/delete" %>
+					  	<%= link_to 'Delete',str,method: "delete" %>
+					  </span>
 				  </div>
 				  <% str="answer_modal_#{q.id}" %>	
 				  
