--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -73,7 +73,7 @@
 					  </span>
 					  <span>
 					  	<% str = "/question/#{q.id}/delete" %>
-					  	<%= link_to 'Delete',str,method: "delete" %>
+					  	<%= link_to ', Delete',str,method: "delete" %>
 					  </span>
 				  </div>
 				  <% str="answer_modal_#{q.id}" %>	
